--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+body{
+  background :white;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+ min-height:50vh;
+ display:flex flex-wrap ;
+ 
+ justify-content: right;
+ align-items:center;
+
+}
+
+.container{
+  width:90vw;
+  max-width: var(--fixed-width);
+  margin:5rem;
+  background:var(--white);
+  border-radius: var(--shadow-2);
+  padding:1.5rem 2rem;
+  box-shadow: var(--shadow-3);
+
+}
+
+.container h3{
+  margin-bottom :1rem;
+
+}
+
+.person{
+  display:flex;
+  grid-template-columns : auto 1fr;
+  column-gap: 0.75rem;
+  margin-bottom:1.5rem;
+  align-items:center;
+}
+
+.person img{
+  width:100px;
+  height:100px;
+  border-radius: 100%;
+  box-shadow: var(--shadow-4);
+}
+
+.person h4{
+  font-weight:500;
+  margin-bottom:0.5rem;
+}
+
+.person p{
+  color: var(--grey-500)
 }
